[tool.poetry]
name = "glimpse"
version = "0.1.0"
description = ""
authors = ["asaunde78 <saundersasher78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2023.10.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
